--- a/src/PackageRelease/PackageRelease.csproj
+++ b/src/PackageRelease/PackageRelease.csproj
@@ -3,6 +3,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <Platforms>x64</Platforms>
+        <Platform>x64</Platform>
         <RootNamespace />
         <Configurations>Release;Debug</Configurations>
         <IsPackable>false</IsPackable>
