--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
-.gitattributes export-ignore
-.gitignore export-ignore
-/src/GiveOrdersAfterDeath.Tests export-ignore
-/src/PackageRelease export-ignore
-/src/ReferenceAssemblyGenerator export-ignore
+# Auto detect text files and perform LF normalization
+* text=auto
+
+*.cs text diff=csharp
